# plango-api

./: .dockerignore  .env.example  .gitignore  CHANGELOG_v6.md  Dockerfile  EXACT_FIX_STEPS.md  INTEGRATION_TEST_RESULTS.md  README.md  URGENT_API_KEY_FIX.md  debug_api_key.py  detailed_api_diagnosis.py  diagnose_connections.py  docker-compose.yml  fix_api_key_issue.md  fix_api_key_restrictions.py  fix_gimpo_removal.py  fixed_prompt.json  healthcheck.py  main.py  makefile  monitor_railway_logs.py  predeploy_check.py  prompts_output.json  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  safe_prompt_update.json  search_strategy_prompt.sql  setup_new_schema.sql  setup_prompt.py  setup_search_strategy_prompt.sql  setup_supabase_schema.sql  simple_itinerary.py  simple_server.py  simple_test.py  test-api.js  test_advanced_architecture.py  test_all_google_apis.py  test_ambiguous_city.py  (+54 more)
app/: __init__.py  config.py  main.py  main_temp.py
app/data/: ai_settings.json  prompts.json
app/routers/: admin.py  admin_dashboard.py  api_diagnosis.py  destinations.py  diagnosis.py  health.py  itinerary.py  new_itinerary.py  place_recommendations.py  places.py  setup.py  setup_v6.py
app/schemas/: __init__.py  destination.py  itinerary.py  place.py
app/services/: __init__.py  advanced_itinerary_service.py  ai_handlers.py  ai_service.py  api_key_manager.py  dynamic_ai_service.py  email_service.py  enhanced_ai_service.py  geocoding_service.py  google_directions_service.py  google_places_service.py  itinerary_service.py  new_itinerary_service.py  place_recommendation_service.py  place_recommendation_service_v2.py  supabase_service.py
app/utils/: logger.py
tests/: __init__.py  test_health.py
